[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/characters/Enemy.gd" type="Script" id=1]

[node name="Enemy" type="Area2D" groups=["enemies"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="SlideTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="SlideTimer" to="." method="_on_SlideTimer_timeout"]
